fix: Bug in order cost calculation
Costing was not factoring in the quantity of the product ordered. Fixed here and added additional unit testing of the service