@@ -1,8 +1,12 @@
 package com.shop.generic.orderservice.services;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import com.shop.generic.common.dtos.OrderCreationDTO;
@@ -13,9 +17,12 @@ import com.shop.generic.orderservice.entities.Order;
 import com.shop.generic.orderservice.repositories.OrderRepository;
 import java.math.BigDecimal;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -28,22 +35,38 @@ class OrderServiceTest {
     @Mock
     private ShippingService shippingService;
 
+    //Should really use constructor injection but showing this as an alternative example for injecting the mocks
+    @InjectMocks
+    private OrderService orderService;
+
     @Test
     @DisplayName("Given a valid order creation request, when creating a shipping order, then should save the order and create a shipping request")
     void testCreateShippingOrder() {
         // Given
-        final OrderCreationDTO orderCreationDTO = new OrderCreationDTO(
-                Collections.singletonList(new PurchaseProductDTO(1, 25, BigDecimal.TEN)));
+        final PurchaseProductDTO product1 = new PurchaseProductDTO(1, 5, new BigDecimal("10.00"));
+        final PurchaseProductDTO product2 = new PurchaseProductDTO(2, 2, new BigDecimal("14.99"));
+        final OrderCreationDTO orderCreationDTO = new OrderCreationDTO(List.of(product1, product2));
 
         // When
-        final OrderService orderService = new OrderService(orderRepository, shippingService);
         final OrderResponseDTO orderResponseDTO = orderService.createShippingOrder(
                 orderCreationDTO);
 
         // Then
+        assertNotNull(orderResponseDTO);
+        assertEquals(OrderStatus.CREATED, orderResponseDTO.status());
+
+        // Capture the saved order
+        final ArgumentCaptor<Order> orderCaptor = ArgumentCaptor.forClass(Order.class);
+        verify(orderRepository, times(1)).save(orderCaptor.capture());
+        final Order savedOrder = orderCaptor.getValue();
+
+        assertNotNull(savedOrder.getOrderId());
+        assertEquals(new BigDecimal("79.98"), savedOrder.getPrice());
+        assertEquals(OrderStatus.CREATED, savedOrder.getStatus());
+        assertEquals("1,2", savedOrder.getProductIds());
+
         verify(orderRepository).save(any(Order.class));
         verify(shippingService).createShippingRequest(any(Order.class));
-        assertEquals(OrderStatus.CREATED, orderResponseDTO.status());
     }
 
     @Test
@@ -51,9 +74,6 @@ class OrderServiceTest {
     void testCreateShippingOrder_NullOrderCreationRequest() {
         // Given
         final OrderCreationDTO orderCreationDTO = null;
-
-        // When
-        final OrderService orderService = new OrderService(orderRepository, shippingService);
 
         //Then
         assertThrows(
@@ -68,7 +88,6 @@ class OrderServiceTest {
         final OrderCreationDTO orderCreationDTO = new OrderCreationDTO(Collections.emptyList());
 
         // When
-        final OrderService orderService = new OrderService(orderRepository, shippingService);
         final RuntimeException exception = assertThrows(RuntimeException.class,
                 () ->
                         orderService.createShippingOrder(orderCreationDTO));
@@ -76,5 +95,28 @@ class OrderServiceTest {
         // Then
         assertEquals("An order cannot be created with no products",
                 exception.getMessage());
+    }
+
+    @Test
+    @DisplayName("Verify a shipping request is not sent if the order fails to persist to the database")
+    void testCreateShippingOrder_FailureInRepository() {
+        // Arrange
+        final PurchaseProductDTO product1 = new PurchaseProductDTO(1, 2, new BigDecimal("10.00"));
+        final OrderCreationDTO orderCreationDTO = new OrderCreationDTO(List.of(product1));
+
+        doThrow(new RuntimeException("Database error")).when(orderRepository)
+                .save(any(Order.class));
+
+        final OrderService orderService = new OrderService(orderRepository, shippingService);
+
+        // Act & Assert
+        final RuntimeException exception = assertThrows(RuntimeException.class, () -> {
+            orderService.createShippingOrder(orderCreationDTO);
+        });
+
+        assertEquals("Database error", exception.getMessage());
+
+        // Verify that shipping request was not made due to the exception
+        verify(shippingService, never()).createShippingRequest(any(Order.class));
     }
 }
